--- a/freecodecamp/vertworld/styles.css
+++ b/freecodecamp/vertworld/styles.css
@@ -1,13 +1,34 @@
-body {
-    background-color: black;
-    text-align: center;
+body{
+    margin:0;
+    background:darkgray;
+    overflow:hidden;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
 
-h1 {
-    color: white;
-    font-family: Arial, serif;
+#verticalButtons{
+    display:flex;
+    flex-direction:column;
 }
 
-#myCanvas {
-    background-color: #2a5;
+button{
+    border: none;
+    border-radius: 5px;
+    padding: 5px 5px 7px 5px;
+    margin: 2px;
+    cursor:pointer;
+}
+button:hover{
+    background:blue;
+}
+
+#miniMapCanvas{
+    background:black;
+}
+#networkCanvas{
+    background:black;
+}
+#carCanvas{
+    background:#2a5;
 }
